crates/biome_js_parser/tests/js_test_suite/error/import_type_error2.ts
type A = typeof import("a.json",{